# CryptoAPIMiniProject

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py  schema.py
app/domain/data/: api.py  crud.py
app/domain/store/: api.py  crud.py  task.py
