[tool.poetry]
name = "superix"
version = "0.1.0"
description = ""
authors = ["Kevin Moon <skm04614@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
sqlalchemy = "^2.0.31"
pytz = "^2024.1"
requests = "^2.32.3"
ccxt = "^4.3.73"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
